--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <div class="controls-info">
             <p>Use arrow keys or WASD to move tiles</p>
         </div>
+        <div id="save-load-container">
+            <div id="save-buttons"></div>
+            <div id="load-buttons"></div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
